# darknet

./: .gitignore  CMakeLists.txt  Makefile  README.md
examples/: art.c  attention.c  classifier.c  coco.c  darknet.c  detector-scipy-opencv.py  detector.c  detector.py  dice.c  lsd.c  rnn_vid.c  swag.c  voxel.c  writing.c  yolo.c
include/: darknet.h
src/: activation_kernels.cu  activation_layer.c  activations.c  avgpool_layer_kernels.cu  blas.c  blas.h  blas_kernels.cu  col2im_kernels.cu  compare.c  connected_layer.c  convolutional_kernels.cu  convolutional_layer.c  convolutional_layer.h  crnn_layer.h  crop_layer_kernels.cu  deconvolutional_kernels.cu  deconvolutional_layer.h  demo.c  detection_layer.c  dropout_layer_kernels.cu  im2col.h  im2col_kernels.cu  image.c  image.h  list.c  local_layer.h  maxpool_layer_kernels.cu  network.c  parser.c  rnn_layer.h  stb_image.h  stb_image_write.h  utils.c
